--- a/style.css
+++ b/style.css
@@ -1,1 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+body {
+    background-color: #eee;
+    font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
+    font-weight: 200;
+
+}
+.newspaper-container {
+    width: 850px;
+    background-color: white;
+    border-style: border-box;
+    border-radius: 10px;
+    margin: 3em auto;
+    padding: 1em;
+}
+.date {
+    color: gray;
+
+}
+h1{
+    text-align: center;
+    font-family: Abril Fatface;
+    font-size: 400%;
+}
+nav {
+    text-align: center;
+    border-top: solid #eee;
+    border-bottom: solid #eee;
+    height: 50px;
+}
+nav ul {
+    color: #eee;
+    padding: 0;
+    display: inline-block;
+    list-style-type: none;
+}
+nav li {
+    float: left;
+}
+a {
+    padding: 0px 13px 0px 13px;
+    font-size: 1em;
+    color: #777;
+    display: block;
+    text-decoration: none;
+}
+h2 {
+    font-weight: 50px;
+    font-size: 1.8em;
+    font-family: Roboto Slab;
+}
+h5 {
+    color: red;
+    font-size: 1em;
+    font-weight: 5000;
+    font-family: Abril Fatface;
+}
+.mainArticle {
+    width: 825px;
+    margin-left: 12.5px;
+    margin-right: 20;
+}
+p {
+    font-weight: 100px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: justify;
+}
+.more-articles:only-child {
+    color: red;
+
+}
