--- a/style.css
+++ b/style.css
@@ -23,10 +23,13 @@ h1{
     font-size: 400%;
 }
 nav {
+    background-color: white;
     text-align: center;
     border-top: solid #eee;
     border-bottom: solid #eee;
     height: 50px;
+    position: sticky;
+    top: 0em;
 }
 nav ul {
     color: #eee;
@@ -66,7 +69,14 @@ p {
     margin-right: 15px;
     text-align: justify;
 }
-.more-articles:only-child {
-    color: red;
+.more-articles img {
+    width: 22.5em;
 
+}
+.more-articles p {
+    color: red;
+    margin-left: 10px;
+    margin-right: 5px;
+    inline-size: 300px;
+    overflow-wrap: break-word;
 }
